# FinancingPrivateCredit

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_dashboard.py
config/model_specs/: bank_macro_sensitivity.json  bank_macro_sensitivity_extended.json  bank_macro_sensitivity_minimal.json  baseline_aplr.json  duration_mismatch.json  duration_mismatch_ardl.json  duration_mismatch_stock_vol.json  funding_stability.json  funding_stability_ardl.json  funding_stability_components.json  funding_stability_run_risk.json  jpm_seasonal.json  lis_enhanced.json  macro_enriched.json  variance_decomp_baseline.json
notebooks/: 01_reproduce_fed_methodology.ipynb  02_credit_boom_indicator.ipynb
scripts/: backtest_models.py
src/financing_private_credit/: __init__.py  analysis.py  bank_data.py  cache.py  dashboard.py  data.py  forecast_models.py  leading_indicator.py  macro.py  nowcast.py  viz.py
src/financing_private_credit/core/: __init__.py  config.py  data_registry.py  model_specs.py  registry.py  utils.py
src/financing_private_credit/indicators/: __init__.py  base.py  credit_boom.py  variance_decomposition.py
src/financing_private_credit/indicators/FASAR/: (FASAR) Flex-Adjusted Syndicate Absorption Ratio.md
src/financing_private_credit/indicators/_template/: README.md  __init__.py  forecast.py  indicator.py  nowcast.py
src/financing_private_credit/indicators/bank_macro_sensitivity/: README.md  __init__.py  backtest.py  forecast.py  indicator.py  nowcast.py
tests/: __init__.py  test_data_fetching.py  test_indicators.py
(+27 files in other folders)
